--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,8 @@ footer {
   border: solid 1px black;
   padding: 10px 0px 10px 0px;
 }
+
+.shadow {
+  box-shadow: 18px 18px 25px 4px rgba(0, 0, 0, 0.49);
+  transition: 0.25s;
+}
